fix: Enhance parameter handling in BuildFormatManager for list types